Basic web index page.
    Nothing yet just got the first couple of templates.

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "type": "Page",
-    "Host": "Thors Anvil"
+    "title": "Name Your Site",
+    "description": "Simple Description",
+    "menu": null
 }
