Define an article.
    Reworked some of the comment elements.
    Modified Footer so we can pull comments as well as count them

--- a/config.json
+++ b/config.json
@@ -1,9 +1,10 @@
 {
-    "author": "The Copy Right Owner",
-    "title": "Name Your Site",
-    "description": "Simple Description",
-    "menu": null,
+    "author":       "The Copy Right Owner",
+    "title":        "Name Your Site",
+    "description":  "Simple Description",
+    "menu":         null,
     "disque": {
-        "site":   "RegisterYourSite"
+        "site":     "RegisterYourSite",
+        "count":    false
     }
 }
